src/tests/testfiles/binary-operator-types-16.txt
Error at 2:5: Binary operator operands must have the same type (have char[] rvalue and char rvalue)
"a" - 'B';
^
